# ModalSheaf

./: .gitignore  .readthedocs.yaml  LICENSE  NEURO_TOPOLOGICAL_PIPELINE_HANDOFF.md  README.md  pyproject.toml
.venv312/: pyvenv.cfg
docs/: GLUING_THEORY.md  HANDOFF_PYDELT.md  INTUITIVE_COHOMOLOGY.md  MODALITY_ROADMAP.md  RESEARCH_LINKS.md  index.rst
docs/resources/: bibliography.md  glossary.md
docs/theory/: 00_data_spaces_and_topology.md  02_sheaves_intuition.md  04_gluing_and_cohomology.md  05_advanced_cohomology.md  05_applications_to_ml.md  06_cocycles_in_practice.md  06_topological_loss.md  07_persistence_guide.md  08_sheaf_flavors.md
examples/: 01_basic_usage.py  02_modality_system.py  03_transforms.py  05_advanced_cohomology.py  05_diagnostics.py  05_knowledge_graphs.py  06_llm_context_generation.py  06_measured_transforms.py  07_reward_sheaves.py
modalsheaf/: README.md  pyproject.toml
modalsheaf/docs/: INTUITIVE_COHOMOLOGY.md  conf.py
modalsheaf/docs/resources/: bibliography.md
modalsheaf/docs/theory/: 00_why_topology.md  01_spaces_and_continuity.md  03_restriction_extension.md  04_gluing_and_cohomology.md  05_applications_to_ml.md
modalsheaf/examples/: 04_gluing.py
modalsheaf/src/modalsheaf/: __init__.py  consistency.py  transforms.py
modalsheaf/src/modalsheaf/modalities/: __init__.py  base.py  transforms.py
modalsheaf/src/modalsheaf/tests/: test_consistency.py  test_graph.py
src/modalsheaf/: __init__.py  cech.py  cocycles.py  consistency.py  core.py  diagnostics.py  gluing.py  graph.py  knowledge.py  measured_transforms.py  persistence.py
src/modalsheaf/applications/: __init__.py  neuro.py  rl.py
src/modalsheaf/modalities/: __init__.py  base.py  handlers.py  loaders.py  transforms.py
src/modalsheaf/tests/: __init__.py  test_core.py  test_llm_context.py
